<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp">

        <Button
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/search"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <Button
                android:id="@+id/btn_clear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/clear"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <TextView
                android:id="@+id/search_txt_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:labelFor="@id/pltxt_mainTitle"
                android:text="@string/favorite"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toEndOf="@+id/search_favorite"
                app:layout_constraintStart_toStartOf="@+id/search_txt_evaluation"
                app:layout_constraintTop_toBottomOf="@+id/search_txt_evaluation" />

        <ImageView
                android:id="@+id/search_favorite"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_favorite_unselected_30dp"
                app:layout_constraintBottom_toBottomOf="@+id/search_txt_favorite"
                app:layout_constraintStart_toEndOf="@+id/search_txt_favorite"
                app:layout_constraintTop_toTopOf="@+id/search_txt_favorite" />

        <TextView
                android:id="@+id/search_txt_evaluation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:labelFor="@id/search_pltxt_mainTitle"
                android:text="@string/rating"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_bar_etc" />

        <RatingBar
                android:id="@+id/search_ratingBar"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="false"
                android:stepSize="1"
                android:theme="@style/RatingBar"
                app:layout_constraintBottom_toBottomOf="@+id/search_txt_evaluation"
                app:layout_constraintStart_toEndOf="@+id/search_txt_evaluation"
                app:layout_constraintTop_toTopOf="@+id/search_txt_evaluation" />

        <TextView
                android:id="@+id/search_bar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_custom"
                android:labelFor="@id/search_pltxt_mainTitle"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:text="@string/title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/textcolor_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <EditText
                android:id="@+id/search_pltxt_mainTitle"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:autofillHints="@string/hint"
                android:background="@drawable/edittext_custom"
                android:inputType="textNoSuggestions"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_bar_title" />

        <TextView
                android:id="@+id/search_bar_director"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/textview_custom"
                android:labelFor="@id/search_sp_director"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:text="@string/director"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/textcolor_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_pltxt_mainTitle" />

        <Spinner
                android:id="@+id/search_sp_director"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/spinner_view"
                android:spinnerMode="dialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_bar_director" />

        <TextView
                android:id="@+id/search_bar_actor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/textview_custom"
                android:labelFor="@id/search_sp_actor"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:text="@string/actor"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/textcolor_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_sp_director" />

        <Spinner
                android:id="@+id/search_sp_actor"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/spinner_view"
                android:spinnerMode="dialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_bar_actor" />

        <TextView
                android:id="@+id/search_bar_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/textview_custom"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:text="@string/genreName"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/textcolor_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_sp_actor" />

        <Spinner
                android:id="@+id/search_sp_genre"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/spinner_view"
                android:spinnerMode="dialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_bar_genre" />

        <TextView
                android:id="@+id/search_bar_etc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/textview_custom"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:text="@string/etc"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/textcolor_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_sp_genre" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>