<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <!-- Bar Text -->
        <TextView
                android:id="@+id/txt_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:labelFor="@id/pltxt_mainTitle"
                android:text="@string/favorite"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
                android:id="@+id/bar_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/textview_custom"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:text="@string/title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/textcolor_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
                android:id="@+id/bar_imageAndrating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_custom"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:text="@string/image_rating"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/textcolor_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/bat_director"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/textview_custom"
                android:labelFor="@id/pltxt_director"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:text="@string/director"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/textcolor_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pltxt_furigana" />

        <TextView
                android:id="@+id/bar_actor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/textview_custom"
                android:labelFor="@id/pltxt_actor"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:text="@string/actor"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/textcolor_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pltxt_director" />

        <TextView
                android:id="@+id/bar_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/textview_custom"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:text="@string/genreName"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/textcolor_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pltxt_actor" />

        <TextView
                android:id="@+id/bar_country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/textview_custom"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:text="@string/country"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/textcolor_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sp_genre" />

        <!-- Text -->

        <TextView
                android:id="@+id/txt_evaluation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:labelFor="@id/pltxt_mainTitle"
                android:text="@string/rating"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="@+id/txt_favorite"
                app:layout_constraintTop_toBottomOf="@+id/favorite" />

        <TextView
                android:id="@+id/txt_mainTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:labelFor="@id/pltxt_mainTitle"
                android:text="@string/mainTitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bar_title" />

        <TextView
                android:id="@+id/txt_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:labelFor="@id/pltxt_subTitle"
                android:text="@string/subtitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintBottom_toBottomOf="@+id/txt_mainTitle"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/txt_mainTitle" />

        <TextView
                android:id="@+id/txt_furigana"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:labelFor="@id/pltxt_furigana"
                android:text="@string/furigana"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="@+id/txt_mainTitle"
                app:layout_constraintTop_toBottomOf="@+id/pltxt_mainTitle" />

        <!-- EditText -->
        <EditText
                android:id="@+id/pltxt_mainTitle"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:autofillHints="@string/hint"
                android:background="@drawable/edittext_custom"
                android:inputType="textNoSuggestions"
                android:labelFor="@id/pltxt_mainTitle"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_mainTitle" />

        <EditText
                android:id="@+id/pltxt_subTitle"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:autofillHints="@string/hint"
                android:background="@drawable/edittext_custom"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/pltxt_mainTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/pltxt_mainTitle" />

        <EditText
                android:id="@+id/pltxt_furigana"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:autofillHints="@string/hint"
                android:background="@drawable/edittext_custom"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_furigana" />

        <EditText
                android:id="@+id/pltxt_director"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:autofillHints="@string/hint"
                android:background="@drawable/edittext_custom"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bat_director" />

        <EditText
                android:id="@+id/pltxt_actor"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:autofillHints="@string/hint"
                android:background="@drawable/edittext_custom"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bar_actor" />

        <!-- Button -->
        <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/save"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sp_country"
                app:layout_constraintVertical_bias="0.0" />

        <!-- Spinner -->

        <Spinner
                android:id="@+id/sp_genre"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/spinner_view"
                android:spinnerMode="dialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bar_genre" />

        <Spinner
                android:id="@+id/sp_country"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/spinner_view"
                android:spinnerMode="dialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bar_country" />

        <!-- IamgeView -->
        <ImageView
                android:id="@+id/imageView"
                android:layout_width="110dp"
                android:layout_height="160dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/imageview_noimage"
                android:src="@drawable/ic_addphoto"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bar_imageAndrating" />

        <ImageView
                android:id="@+id/favorite"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_favorite_unselected_30dp"
                app:layout_constraintStart_toStartOf="@+id/txt_favorite"
                app:layout_constraintTop_toBottomOf="@+id/txt_favorite" />

        <!-- RatingBar -->
        <RatingBar
                android:id="@+id/ratingBar"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="false"
                android:stepSize="1"
                android:theme="@style/RatingBar"
                app:layout_constraintStart_toStartOf="@+id/txt_evaluation"
                app:layout_constraintTop_toBottomOf="@+id/txt_evaluation" />

        <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.50121653" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>