<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_movieDataTitleName"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toEndOf="@+id/txt_movieDataTitleName" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txt_movieDataTitleName"
            android:id="@+id/txt_movieDataTitle"/>
    <TextView
            android:text="@string/director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_movieDataDirectorName"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintTop_toBottomOf="@+id/txt_movieDataTitleName" android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@+id/txt_movieDataTitleName"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_movieDataDirector" app:layout_constraintStart_toEndOf="@+id/txt_movieDataDirectorName"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBaseline_toBaselineOf="@+id/txt_movieDataDirectorName"/>
    <TextView
            android:text="@string/actor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_movieDataActorName"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintTop_toBottomOf="@+id/txt_movieDataDirectorName" android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@+id/txt_movieDataDirectorName" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
    />
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_movieDataActor"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toEndOf="@+id/txt_movieDataActorName" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txt_movieDataActorName"/>
    <TextView
            android:text="@string/genreName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_movieDataGenreName"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_movieDataActorName"
            app:layout_constraintEnd_toEndOf="@+id/txt_movieDataActorName"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_movieDataGenre"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toEndOf="@+id/txt_movieDataGenreName" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txt_movieDataGenreName"/>

</android.support.constraint.ConstraintLayout>